--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     <div class="container categories">
       <div class="row">
         <div class="col-md-4">
-          <div class="d-flex justify-content-between cat1 align-items-center">
+          <div class="d-flex justify-content-between cat1 align-items-center mb-5">
             <h1>Watch</h1>
           <img src="images/categories/watch.png" alt="">
           </div>
         </div>
         <div class="col-md-4">
-          <div class="d-flex justify-content-between cat2 align-items-center">
+          <div class="d-flex justify-content-between cat2 align-items-center mb-5">
             <h1>Bag</h1>
           <img src="images/categories/bag.png" alt="">
           </div>
